src/test/deca/syntax/invalid/resultats/test26_ifelse-synt.res
./src/test/deca/syntax/invalid/test26_ifelse.deca:20:3: mismatched input 'else' expecting {'+', '-', '*', 'instanceof', '<', '>', '=', '/', '%', '.', ';', '==', '!=', '>=', '<=', '&&', '||'}
